--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -3,7 +3,7 @@ baseURL = "https://test-mycreateurdesite.netlify.com"
 title = "MyCréateurdeSite | Hugo Portfolio Template"
 theme = "somrat"
 # disable language
-disableLanguages = [Fr] # disable language from here
+disableLanguages = [fr-fr] # disable language from here
 
 ############################# Plugins ##############################
 
