--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -143,7 +143,7 @@ portfolio:
     - name : "Project <br> Title"
       image : "images/portfolio/item2.jpg"
       date : "Feb 2018"
-      category : "Web Development"
+      category : "Logo"
       
     # portfolio item loop
     - name : "Project <br> Title"
