--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -25,7 +25,7 @@ hero:
 fullscreen_nav:
   enable : true
   bg_image : "images/backgrounds/photo-1558625628-8b7292e0c335.jpeg"
-  first_name : "Laurent"
+  first_name : "coding is a world in motion"
   last_name : "MyCréateurdeSite"
   
 
