--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -34,7 +34,7 @@ about:
   enable : true
   image : "images/backgrounds/workcatandme-1-hugo-site.jpg"
   title : "KNOW MORE <br> ABOUT ME"
-  content : "Hello everyone, it's Laurent, Professional Web Developer and Web Designer. I love to design and to write code, it's my passion. I am here to help you, I am here to design your web page. I can help you to describe yourself in the best way.<br>No matter how difficult your web page is, I will find an easy way and complete your work anyway. Stay connect with me............😊"
+  content : "Hello everyone, I'm Laurent, Professional Web Developer and Web Designer. I love to design and to write code, it's my passion. I am here to help you, I am here to design your web page. I can help you to describe yourself in the best way.<br>No matter how difficult your web page is, I will find an easy way and complete your work anyway. Stay connect with me............😊"
   # button
   button:
     enable : true
