--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -228,7 +228,7 @@ portfolio:
 testimonial:
   enable : true
   title : "PARTNERS"
-  partners_slider:
+  testimonial_slider:
     # slider item loop
     - name : "Micheal Clark"
       image : "images/clients/client1.jpg"
