--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://test-mycreateurdesite.netlify.com"
-title = "MyCréateurdeSite | Hugo Portfolio Template"
+title = "MyCréateurdeSite | Freelance Site Web"
 theme = "somrat"
 # disable language
 disableLanguages = [] # disable language from here
@@ -118,7 +118,7 @@ link = "https://www.linkedin.com/in/mycreateurdesite"
 languageName = "En"
 languageCode = "en-us"
 contentDir = "content/english"
-weight = 1
+weight = 2
 home = "Home"
 # copyright
 copyright = "Copyright &copy; 2020 with GoLang by [MyCréateurdeSite](https://www.mycreateurdesite.fr/)"
@@ -129,7 +129,7 @@ copyright = "Copyright &copy; 2020 with GoLang by [MyCréateurdeSite](https://ww
 languageName = "Fr"
 languageCode = "fr-fr"
 contentDir = "content/french"
-weight = 2
+weight = 1
 home = "Accueil"
 # copyright
 copyright = "Copyright &copy; 2020 avec GoLang by [MyCréateurdeSite](https://www.mycreateurdesite.fr/)"
