--- a/exampleSite/data/fr/homepage.yml
+++ b/exampleSite/data/fr/homepage.yml
@@ -1,6 +1,6 @@
 ########################## hero area ##########################
 hero:
-  title : "Salut, c'est Laurent"
+  title : "Je suis Laurent, et vous ?"
 
   # animated text loop
   occupations:
@@ -34,7 +34,7 @@ about:
   enable : true
   image : "images/backgrounds/workcatandme-1-hugo-site.jpg"
   title : "A PROPOS"
-  content : "Je m'appelle Laurent, et je suis Développeur Web professionnel. Coder est ma passion. Je suis là pour vous aider à réaliser vos projets et construire vos outils numériques. Je peux également vous aider à construire votre image numérique. <br>Peu importe la difficulté, je trouverai facilement le moyen de concrétiser vos projets. Restons connectés............😊"
+  content : "Bonjour tout le monde, je suis Laurent, Développeur Web professionnel. Coder est ma passion. Je suis là pour vous aider à réaliser vos projets et construire vos outils numériques. Je peux également vous aider à construire votre image numérique. <br>Peu importe la difficulté, je trouverai facilement le moyen de concrétiser vos projets. Restons connectés............😊"
   # button
   button:
     enable : true
