--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -49,6 +49,7 @@ link = "plugins/owl-carousel/owl.carousel.min.js"
 # main menu
 [[menu.main]]
 name = "Home"
+name.fr = "Accueil"
 URL = "#home"
 weight = 1
 
