--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -1,5 +1,6 @@
 ########################## hero area ##########################
 hero:
+  title : "Bonjour"
   title : "Je suis Laurent, et vous ?"
 
   # animated text loop
