--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -1,7 +1,6 @@
 ########################## hero area ##########################
 hero:
-  title : "Bonjour"
-  title : "Je suis Laurent, et vous ?"
+  title : "Hi, I'm Laurent"
 
   # animated text loop
   occupations:
