--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -1,6 +1,6 @@
 ########################## hero area ##########################
 hero:
-  title : "Bonjour !"
+  title : "Je suis Laurent"
 
   # animated text loop
   occupations:
