--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -1,6 +1,6 @@
 ########################## hero area ##########################
 hero:
-  title : "Bonjour l'ami"
+  title : "Bienvenu.e l'ami.e"
 
   # animated text loop
   occupations:
