--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -81,7 +81,7 @@ weight = 6
 #################### default parameters ################################
 [params]
 logo_light = "images/my__createurdesite_logo-sans-fond.png"
-logo_dark = "images/my__createurdesite_ grand-blanc.png"
+logo_dark = "images/my__createurdesite_ logo-blanc.png"
 # Meta data
 description = "This is meta description"
 author = "somrat"
